force-app/main/default/objects/Invoice__c/fields/Account_Sign_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Sign_Up_Date__c</fullName>
    <formula>Account__r.Sign_Up_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Sign Up Date</label>
    <type>Date</type>
</CustomField>