force-app/main/default/objects/Invoice__c/fields/Accounting_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Rule_Name__c</fullName>
    <description>Oracle Receivables uses this value to determine if the Deferral is Advance or if the billing is in Arrears, in case of a -ive Amount value, this value should be Blank</description>
    <formula>IF( 
AND(Amount__c &gt;= 0.00, Bill_in_Arrears__c &lt;&gt; True), &quot;Advance Invoice&quot;, &quot;&quot;)</formula>
    <inlineHelpText>Oracle Receivables uses this value to determine if the Deferral is Advance or if the billing is in Arrears, in case of a -ive Amount value, this value should be Blank</inlineHelpText>
    <label>Accounting Rule Name</label>
    <type>Text</type>
</CustomField>