force-app/main/default/objects/Invoice__c/fields/AccountStatus__c.field-meta.xml
<CustomField>
    <fullName>AccountStatus__c</fullName>
    <formula>TEXT(Account__r.Account_Status__c)</formula>
    <label>AccountStatus</label>
    <type>Text</type>
</CustomField>