force-app/main/default/objects/Invoice__c/fields/Amount_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Amount_Breakdown__c</fullName>
    <formula>Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Breakdown</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>