force-app/main/default/objects/Invoice__c/fields/Amount_KeepitsafeNL__c.field-meta.xml
<CustomField>
    <fullName>Amount_KeepitsafeNL__c</fullName>
    <label>Amount KeepitsafeNL</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>