force-app/main/default/objects/Invoice__c/fields/April__c.field-meta.xml
<CustomField>
    <fullName>April__c</fullName>
    <label>April</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>