force-app/main/default/objects/Invoice__c/fields/Audit_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Audit_Account_ID__c</fullName>
    <description>For Oracle Bill Audit - Customer Number of Account (Used in Send Bill to = Direct)</description>
    <formula>Account__r.Customer_ID2__c</formula>
    <inlineHelpText>For Oracle Bill Audit - Customer Number of Account (Used in Send Bill to = Direct)</inlineHelpText>
    <label>Audit: Account ID</label>
    <type>Text</type>
</CustomField>