force-app/main/default/objects/Invoice__c/fields/Audit_Parent_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Audit_Parent_Account_ID__c</fullName>
    <description>For Oracle Bill Audit - Customer Number of Account (Used in Send Bill to = Partner)</description>
    <formula>Account__r.Parent.Customer_ID2__c</formula>
    <inlineHelpText>For Oracle Bill Audit - Customer Number of Account (Used in Send Bill to = Partner)</inlineHelpText>
    <label>Audit: Parent Account ID</label>
    <type>Text</type>
</CustomField>