force-app/main/default/objects/Invoice__c/fields/Audit_Send_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Audit_Send_Bill_To__c</fullName>
    <formula>TEXT(Account__r.Send_Bill_To__c)</formula>
    <label>Audit: Send Bill To</label>
    <type>Text</type>
</CustomField>