force-app/main/default/objects/Invoice__c/fields/August__c.field-meta.xml
<CustomField>
    <fullName>August__c</fullName>
    <label>August</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>