force-app/main/default/objects/Invoice__c/fields/Bill_in_Arrears__c.field-meta.xml
<CustomField>
    <fullName>Bill_in_Arrears__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Invoice is to be billed in arrears, then check the box.</description>
    <inlineHelpText>If the Invoice is to be billed in arrears, then check the box.</inlineHelpText>
    <label>Bill in Arrears</label>
    <type>Checkbox</type>
</CustomField>