force-app/main/default/objects/Invoice__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <formula>TEXT(Account__r.Send_Bill_To__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To</label>
    <type>Text</type>
</CustomField>