force-app/main/default/objects/Invoice__c/fields/Bill_To_Partner__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Partner__c</fullName>
    <formula>Account__r.Partner_to_be_Billed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Partner</label>
    <type>Text</type>
</CustomField>