force-app/main/default/objects/Invoice__c/fields/BilledCustomerID__c.field-meta.xml
<CustomField>
    <fullName>BilledCustomerID__c</fullName>
    <formula>Header_Attribute4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BilledCustomerID</label>
    <type>Text</type>
</CustomField>