force-app/main/default/objects/Invoice__c/fields/Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>Billing_Period__c</fullName>
    <description>Oracle Billing uses this value to define the calculation and splits of Deferred Revenue, in case of a -ive Amount value, this value should be Blank</description>
    <inlineHelpText>Oracle Billing uses this value to define the calculation and splits of Deferred Revenue, in case of a -ive Amount value, this value should be Blank</inlineHelpText>
    <label>Billing Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Bi-Annual</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>One-off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>