force-app/main/default/objects/Invoice__c/fields/Billing_Period_NB__c.field-meta.xml
<CustomField>
    <fullName>Billing_Period_NB__c</fullName>
    <description>Translates &quot;One-off&quot; to &quot;Monthly&quot; for Oracle purposes.</description>
    <formula>CASE(Billing_Period__c, 
&quot;Annual&quot;,&quot;Annual&quot;, 
&quot;Quarterly&quot;,&quot;Quarterly&quot;, 
&quot;Bi-Annual&quot;,&quot;Bi-Annual&quot;, 
&quot;Monthly&quot;,&quot;Monthly&quot;, 
&quot;One-off&quot;,&quot;Monthly&quot;, 
null 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Period NB</label>
    <type>Text</type>
</CustomField>