force-app/main/default/objects/Invoice__c/fields/Billing_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Run_Date__c</fullName>
    <description>KIS - Invoicing - Use this Date field to specify the Invoicing Run Date - in place of system date - This allows KeepItSafe to run billing for the month in advance of the 1st of the month.</description>
    <inlineHelpText>KIS - Invoicing - Use this Date field to specify the Invoicing Run Date - in place of system date - This allows KeepItSafe to run billing for the month in advance of the 1st of the month. (MM/DD/YYYY)</inlineHelpText>
    <label>Billing Run Date *Verify Date Format</label>
    <type>Date</type>
</CustomField>