force-app/main/default/objects/Invoice__c/fields/Commission_Due__c.field-meta.xml
<CustomField>
    <fullName>Commission_Due__c</fullName>
    <formula>Account__r.Commission__c  *   Q1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Due - Q1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>