force-app/main/default/objects/Invoice__c/fields/Commission_Due_Q1__c.field-meta.xml
<CustomField>
    <fullName>Commission_Due_Q1__c</fullName>
    <description>KIS Commission calculation based upon Fixed or Variable Amount AND checking Reseller Hierarchy</description>
    <formula>IF(Account__r.Commission__c  &gt; 0.00  &amp;&amp;  Q1__c &gt; 0.00, Account__r.Commission__c, Account__r.Commission_Variable_Percentage__c  *  Q1__c )</formula>
    <inlineHelpText>KIS Commission calculation based upon Fixed or Variable Amount AND checking Reseller Hierarchy</inlineHelpText>
    <label>Commission Due - Q1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>