force-app/main/default/objects/Invoice__c/fields/Commission_Due_Q2__c.field-meta.xml
<CustomField>
    <fullName>Commission_Due_Q2__c</fullName>
    <formula>IF(Account__r.Commission__c  &gt; 0.00  &amp;&amp;  Q2__c &gt; 0.00, Account__r.Commission__c, Account__r.Commission_Variable_Percentage__c  *  Q2__c )</formula>
    <label>Commission Due - Q2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>