force-app/main/default/objects/Invoice__c/fields/Consensus_Amount_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Consensus_Amount_Breakdown__c</fullName>
    <description>Consensus Amount Breakdown</description>
    <label>Consensus Amount Breakdown</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>