force-app/main/default/objects/Invoice__c/fields/Consensus_Price__c.field-meta.xml
<CustomField>
    <fullName>Consensus_Price__c</fullName>
    <description>Consensus Price</description>
    <label>Consensus Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>