force-app/main/default/objects/Invoice__c/fields/Consensus_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Consensus_Quantity__c</fullName>
    <description>Consensus Quantity</description>
    <label>Consensus Quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>