force-app/main/default/objects/Invoice__c/fields/Conversion_Date_Oracle_Bill__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Date_Oracle_Bill__c</fullName>
    <description>Convert Date Field to DD-MM-YYYY for Oracle Billing</description>
    <formula>TRX_Date_Oracle_Bill__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Convert Date Field to DD-MM-YYYY for Oracle Billing</inlineHelpText>
    <label>Conversion_Date_Oracle_Bill</label>
    <type>Text</type>
</CustomField>