force-app/main/default/objects/Invoice__c/fields/Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Type__c</fullName>
    <formula>&apos;Corporate&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion Type</label>
    <type>Text</type>
</CustomField>