force-app/main/default/objects/Invoice__c/fields/Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Current_Month__c</fullName>
    <formula>IF(MONTH(Today()) = 1, &quot;January&quot;, 
IF(MONTH(Today()) = 2, &quot;February&quot;, 
IF(MONTH(Today()) = 3, &quot;March&quot;, 
IF(MONTH(Today()) = 4, &quot;April&quot;, 
IF(MONTH(Today()) = 5, &quot;May&quot;, 
IF(MONTH(Today()) = 6, &quot;June&quot;, 
IF(MONTH(Today()) = 7, &quot;July&quot;, 
IF(MONTH(Today()) = 8, &quot;August&quot;, 
IF(MONTH(Today()) = 9, &quot;September&quot;, 
IF(MONTH(Today()) =10, &quot;October&quot;, 
IF(MONTH(Today()) = 11, &quot;November&quot;, 
IF(MONTH(Today()) = 12, &quot;December&quot;, &quot;Error&quot; 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month</label>
    <type>Text</type>
</CustomField>