force-app/main/default/objects/Invoice__c/fields/Current_Month_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Amount__c</fullName>
    <description>Used in query to run invoice for oracle feed via SOA</description>
    <formula>if( MONTH(Today()) = 1, January__c,
if( MONTH(Today()) = 2, February__c,
if( MONTH(Today()) = 3, March__c,
if( MONTH(Today()) = 4, April__c,
if( MONTH(Today()) = 5, May__c,
if( MONTH(Today()) = 6, June__c,
if( MONTH(Today()) = 7, July__c,
if( MONTH(Today()) = 8, August__c,
if( MONTH(Today()) = 9, September__c,
if( MONTH(Today()) = 10, October__c,
if( MONTH(Today()) = 11, November__c,
if( MONTH(Today()) = 12, December__c,
0.00))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>