force-app/main/default/objects/Invoice__c/fields/Cust_TRX_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Cust_TRX_Type_Name__c</fullName>
    <description>The Value which Oracle Billing expects to define the type of Transaction - Credit Memo - Corp in case of a -ive value &amp; Invoice - Corp in case of a +ive value</description>
    <formula>IF( Amount__c  &gt;= 0.00, &quot;Invoice - Corp&quot;, &quot;Credit Memo - Corp&quot;)</formula>
    <inlineHelpText>The Value which Oracle Billing expects to define the type of Transaction - Credit Memo - Corp in case of a -ive value &amp; Invoice - Corp in case of a +ive value</inlineHelpText>
    <label>Cust TRX Type Name</label>
    <type>Text</type>
</CustomField>