force-app/main/default/objects/Invoice__c/fields/Custom_Invoice_Description__c.field-meta.xml
<CustomField>
    <fullName>Custom_Invoice_Description__c</fullName>
    <description>KIS - Invoice System - Enter in any Custom Invoice Description - limited to approximately 100 characters</description>
    <inlineHelpText>KIS - Invoice System - Enter in any Custom Invoice Description - limited to approximately 100 characters</inlineHelpText>
    <label>Custom Invoice Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>