force-app/main/default/objects/Invoice__c/fields/Days_in_Sign_Up_Date_Month__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Sign_Up_Date_Month__c</fullName>
    <formula>IF(Leap_Year__c=True,

CASE(
MONTH( Sign_Up_Date__c ),
2, 29,
4, 30,
6, 30,
9, 30,
11, 30,
31
),

CASE(
MONTH( Sign_Up_Date__c ),
2, 28,
4, 30,
6, 30,
9, 30,
11, 30,
31
)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Sign Up Date Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>