force-app/main/default/objects/Invoice__c/fields/Deferred_Start_Date_NB__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Start_Date_NB__c</fullName>
    <description>Field added to Invoice files</description>
    <formula>&quot;0&quot;+TEXT(1)+&quot;-&quot;
+TEXT(MONTH( TRX_Date_Calc__c ))+&quot;-&quot;
+TEXT(YEAR(TRX_Date_Calc__c ))</formula>
    <inlineHelpText>Calculates Deferred Start Date of Billing - Oracle Reqd. Field</inlineHelpText>
    <label>Deferred Start Date NB</label>
    <type>Text</type>
</CustomField>