force-app/main/default/objects/Invoice__c/fields/DescMonth__c.field-meta.xml
<CustomField>
    <fullName>DescMonth__c</fullName>
    <formula>IF(  Bill_in_Arrears__c = True,

(CASE(MONTH( Billing_Run_Date__c  ), 1, &quot;December&quot;, 2, &quot;January&quot;, 3, &quot;February&quot;,  4, &quot;March&quot;,  5, &quot;April&quot;,  6, &quot;May&quot;, 7, &quot;June&quot;, 8, &quot;July&quot;, 9, &quot;August&quot;, 10, &quot;September&quot;, 11, &quot;October&quot;, 12, &quot;November&quot;, &quot;None&quot;)),


(CASE(MONTH( Billing_Run_Date__c  ), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;))

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DescMonth</label>
    <type>Text</type>
</CustomField>