force-app/main/default/objects/Invoice__c/fields/DescMonthNB__c.field-meta.xml
<CustomField>
    <fullName>DescMonthNB__c</fullName>
    <description>Update Month of Description Value for NB Invoice</description>
    <formula>CASE(MONTH(  Billing_Run_Date__c  ), 2, &quot;January&quot;, 3, &quot;February&quot;, 4, &quot;March&quot;,  5, &quot;April&quot;,  6, &quot;May&quot;,  7, &quot;June&quot;, 8, &quot;July&quot;, 9, &quot;August&quot;, 10, &quot;September&quot;, 11, &quot;October&quot;, 12, &quot;November&quot;, 1, &quot;December&quot;, &quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Update Month of Description Value for NB Invoice</inlineHelpText>
    <label>DescMonthNB</label>
    <type>Text</type>
</CustomField>