force-app/main/default/objects/Invoice__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Fully Managed Online Backup - X Month(s) ** This field is not editable**</description>
    <inlineHelpText>Fully Managed Online Backup - X Month(s) ** This field is not editable**</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>