force-app/main/default/objects/Invoice__c/fields/Description_Period__c.field-meta.xml
<CustomField>
    <fullName>Description_Period__c</fullName>
    <description>KIS BIlling - Suppress True = Account Name + Appends Month YYYY + adds the Custom Invoice Description value  or Suppress False = Standard Description + Appends Month YYYY + adds the Custom Invoice Description value</description>
    <formula>IF(Account__r.ParentId &lt;&gt; null &amp;&amp; Audit_Send_Bill_To__c==&apos;Partner&apos;,

Account__r.Name + &quot; - &quot; + DescMonth__c + &quot; &quot; + DescYear__c + &quot; - &quot; + Custom_Invoice_Description__c + &quot; - &quot; + TEXT(Usage_GB__c) + &quot; GB&quot;+&quot; - &quot; + PO__c,

Account__r.Name + &quot; - &quot; + DescMonth__c + &quot; &quot; + DescYear__c + &quot; - &quot; + Custom_Invoice_Description__c+&quot; - &quot; + PO__c

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>KIS BIlling - Suppress True = Account Name + Appends Month YYYY + adds the Custom Invoice Description value  or Suppress False = Standard Description + Appends Month YYYY + adds the Custom Invoice Description value</inlineHelpText>
    <label>Invoice Description</label>
    <type>Text</type>
</CustomField>