force-app/main/default/objects/Invoice__c/fields/DescYear__c.field-meta.xml
<CustomField>
    <fullName>DescYear__c</fullName>
    <formula>TEXT(YEAR(Billing_Run_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DescYear</label>
    <type>Text</type>
</CustomField>