force-app/main/default/objects/Invoice__c/fields/DescYearNB__c.field-meta.xml
<CustomField>
    <fullName>DescYearNB__c</fullName>
    <formula>IF(MONTH(Billing_Run_Date__c) = 1, TEXT(YEAR(Billing_Run_Date__c -1)), TEXT(YEAR(Billing_Run_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Need to adjust for January Billing Run Dates to use YYYY-1</inlineHelpText>
    <label>DescYearNB</label>
    <type>Text</type>
</CustomField>