force-app/main/default/objects/Invoice__c/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <description>created this field for KIS NL portal integration to capture discount percentage</description>
    <label>Discount Percentage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>