force-app/main/default/objects/Invoice__c/fields/First_Month_Pro_Rated__c.field-meta.xml
<CustomField>
    <fullName>First_Month_Pro_Rated__c</fullName>
    <formula>IF(

ISPICKVAL(Billing_Period__c,&quot;Monthly&quot;), (Amount__c/ Days_in_Sign_Up_Date_Month__c)*(( Days_in_Sign_Up_Date_Month__c-DAY(Sign_Up_Date__c))+1),0

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Month Pro-rated (monthly only)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>