force-app/main/default/objects/Invoice__c/fields/FormattedDescription__c.field-meta.xml
<CustomField>
    <fullName>FormattedDescription__c</fullName>
    <description>This field contains descrition field text with no carriage returns. Used for integration and hidden.</description>
    <inlineHelpText>This field contains descrition field text with no carriage returns. Used for integration and hidden.</inlineHelpText>
    <label>FormattedDescription</label>
    <type>TextArea</type>
</CustomField>