force-app/main/default/objects/Invoice__c/fields/Future1__c.field-meta.xml
<CustomField>
    <fullName>Future1__c</fullName>
    <description>Value should be &apos;00000&apos;</description>
    <formula>LPAD(TEXT(0), 5, &apos;0&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Value should be &apos;00000&apos;</inlineHelpText>
    <label>Future1</label>
    <type>Text</type>
</CustomField>