force-app/main/default/objects/Invoice__c/fields/Future3__c.field-meta.xml
<CustomField>
    <fullName>Future3__c</fullName>
    <description>Value should be &apos;0000&apos;</description>
    <formula>LPAD(TEXT(0), 4, &apos;0&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Value should be &apos;0000&apos;</inlineHelpText>
    <label>Future3</label>
    <type>Text</type>
</CustomField>