force-app/main/default/objects/Invoice__c/fields/GL_Date__c.field-meta.xml
<CustomField>
    <fullName>GL_Date__c</fullName>
    <formula>TRX_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Date</label>
    <type>Text</type>
</CustomField>