force-app/main/default/objects/Invoice__c/fields/GL_Date_Oracle_Bill__c.field-meta.xml
<CustomField>
    <fullName>GL_Date_Oracle_Bill__c</fullName>
    <description>Changed Date format to DD-MM-YYYY for Oracle Billing</description>
    <formula>TRX_Date_Oracle_Bill__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Changed Date format to DD-MM-YYYY for Oracle Billing</inlineHelpText>
    <label>GL_Date_Oracle_Bill</label>
    <type>Text</type>
</CustomField>