force-app/main/default/objects/Invoice__c/fields/Header_Attribute1__c.field-meta.xml
<CustomField>
    <fullName>Header_Attribute1__c</fullName>
    <formula>&apos; &apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Header Attribute1</label>
    <type>Text</type>
</CustomField>