force-app/main/default/objects/Invoice__c/fields/Header_Attribute2__c.field-meta.xml
<CustomField>
    <fullName>Header_Attribute2__c</fullName>
    <formula>&apos; &apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Header Attribute2</label>
    <type>Text</type>
</CustomField>