force-app/main/default/objects/Invoice__c/fields/Int_Bill_Desc_NB__c.field-meta.xml
<CustomField>
    <fullName>Int_Bill_Desc_NB__c</fullName>
    <formula>CASE(MONTH( Billing_Run_Date__c ), 2, &quot;1&quot;, 3, &quot;2&quot;, 4, &quot;3&quot;, 5, &quot;4&quot;, 6, &quot;5&quot;, 7, &quot;6&quot;, 8, &quot;7&quot;, 9, &quot;8&quot;, 10, &quot;9&quot;, 11, &quot;10&quot;, 12, &quot;11&quot;, 1, &quot;12&quot;, &quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Int.Bill.Desc.NB</label>
    <type>Text</type>
</CustomField>