force-app/main/default/objects/Invoice__c/fields/Invoice_Line2__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line2__c</fullName>
    <formula>&apos; &apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Line2</label>
    <type>Text</type>
</CustomField>