force-app/main/default/objects/Invoice__c/fields/Invoice_Reason__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Reason__c</fullName>
    <label>Invoice Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Cheaper Solution/Cost Cutting</fullName>
            </value>
            <value>
                <fullName>Closed Down</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Delinquent</fullName>
            </value>
            <value>
                <fullName>Dis-satisfied with Service</fullName>
            </value>
            <value>
                <fullName>Lost Through Re-seller</fullName>
            </value>
            <value>
                <fullName>Merger/Alliance</fullName>
            </value>
            <value>
                <fullName>Moved to Cloud Solution</fullName>
            </value>
            <value>
                <fullName>Moved to Bulk Invoice</fullName>
            </value>
            <value>
                <fullName>New Contract in Place</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>