force-app/main/default/objects/Invoice__c/fields/Invoice_Rule__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Rule__c</fullName>
    <formula>IF( Bill_in_Arrears__c = True,&quot;&quot;, TEXT(Billing_Period__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Rule</label>
    <type>Text</type>
</CustomField>