force-app/main/default/objects/Invoice__c/fields/June__c.field-meta.xml
<CustomField>
    <fullName>June__c</fullName>
    <label>June</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>