force-app/main/default/objects/Invoice__c/fields/KIS_Legacy_Billed_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>KIS_Legacy_Billed_Customer_ID__c</fullName>
    <label>KIS Legacy Billed Customer ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>