force-app/main/default/objects/Invoice__c/fields/KIS_Legacy_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>KIS_Legacy_Invoice_ID__c</fullName>
    <label>KIS Legacy Invoice ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>