force-app/main/default/objects/Invoice__c/fields/KIS_Legacy_Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>KIS_Legacy_Invoice_Name__c</fullName>
    <label>KIS Legacy Invoice Name</label>
    <length>8</length>
    <type>Text</type>
</CustomField>