force-app/main/default/objects/Invoice__c/fields/KIS_Legacy_Oracle_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>KIS_Legacy_Oracle_Invoice_ID__c</fullName>
    <label>KIS Legacy Oracle Invoice ID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>