force-app/main/default/objects/Invoice__c/fields/Leap_Year__c.field-meta.xml
<CustomField>
    <fullName>Leap_Year__c</fullName>
    <formula>IF(



AND( 

RIGHT(Sign_Up_Year__c, 2)&lt;&gt;&quot;00&quot;, 

MOD(Sign_Up_Year_Value__c ,4)= 0),




True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leap Year</label>
    <type>Checkbox</type>
</CustomField>