force-app/main/default/objects/Invoice__c/fields/Line__c.field-meta.xml
<CustomField>
    <fullName>Line__c</fullName>
    <formula>&apos;LINE&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line</label>
    <type>Text</type>
</CustomField>